assets/css/customstyles.css
/* from the bootswatch theme */
body {
    padding-top: 51px;
    font-family: arial;
}

.col-xs-10.col-sm-7 {
    margin-left: 260px;
}
/* heading font */
h1, h2, h3, h4, h5 {
    font-family: Tahoma;
}

.h2, h2 {
    font-size: 24px;
}
.h3, h3 {
  font-size: 18px;
}
.h4, h4 {
  font-size: 16px;
}
.text-center {
    padding-top: 20px;
}
.col-xs-12 {
    background-color: #fff;
}
#sidebar {
    height: 100%;
    padding-right: 0;
    overflow-y: auto;
}
#sidebar .nav {
    width: 95%;
}

.toc-main-column {
  display: none;
}

.tags-main-column {
  display: none;
}

/* collapsed sidebar styles */
@media screen and (max-width: 767px) {
    .row-offcanvas {
        position: relative;
        -webkit-transition: all 0.25s ease-out;
        -moz-transition: all 0.25s ease-out;
        transition: all 0.25s ease-out;
    }
    .row-offcanvas-right
    .sidebar-offcanvas {
        right: -41.6%;
    }

    .row-offcanvas-left
    .sidebar-offcanvas {
        left: -41.6%;
    }
    .row-offcanvas-right.active {
        right: 41.6%;
    }
    .row-offcanvas-left.active {
        left: 41.6%;
    }
    .sidebar-offcanvas {
        position: absolute;
        top: 0;
        width: 41.6%;
    }
    #sidebar {
        padding-top:0;
    }
    .toc-main-column {
      display: block;
    }
    .tags-main-column {
      display: block;
    }
    .tag-button {
      display: inline;
    }
    .right-lane {
      display: none;
    }
}


/* end bootswatch theme */

/* custom styles tom */

h1 {
    margin-top: 50px;
}

/* mini toc styles start */
nav#toc ul li, div#toc2 ul li {
    margin: 8px 0px 8px 22px;
    font-size: 90%;
    list-style: square;
}

nav#toc >ul::before, div#toc2 >ul::before {
    font-weight: 500;
    color: #555;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    width: 70px;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 10px;
}

nav#toc ul, nav#toc2 ul {
    background-color: whitesmoke;
    padding: 5px;
    border-radius: 5px;
    max-width: 300px;
    color: gray;
}

nav#toc2 ul {
  padding-left: 25px;
}

/* mini toc styles end */

/* this part adds an icon after external links, using FontAwesome*/
a[href^="http://"]:after, a[href^="https://"]:after {
    content: "\f08e";
    font-family: FontAwesome;
    font-weight: normal;
    font-style: normal;
    display: inline-block;
    text-decoration: none;
    padding-left: 3px;
}

/* Strip the outbound icon when this class is present */
a[href].noCrossRef::after,
a.no_icon:after
 {
    content:"" !important;
    padding-left: 0;
}

/* Github edit button */

i.fa.fa-github.fa-lg:hover, a.githubButton.noCrossRef:hover {
    color: black;
    text-decoration: none;
}

a.editButton {
    color: #000000;
}

a.editButton:hover {
    text-decoration: none;
    color: #777;
}

.githubButton{
    color: black;
    background-color: white;
    border: 1px solid #dedede;
    padding: 7px;
    border-radius: 5px;
    margin: 20px 0px 10px 0px;
}
.githubButton:hover {
    background-color: #fefefe;
    color: #444;
    text-decoration: none;
}

/* end github button */
/* search area */
#search-demo-container ul#results-container {
    list-style: none;
    font-size: 12px;
    background-color: white;
    position: absolute;
    top: 40px; /* if you change anything about the nav, you'll prob. need to reset the top and left values here.*/
    left: 20px;
    z-index: -1;
    width:223px;
    border-left: 1px solid #dedede;
    box-shadow: 2px 3px 2px #dedede;
}


ul#results-container a {
    background-color: transparent;
}

ul#results-container a: hover {
    color: black;
}


#search-demo-container a:hover {
    color: black;
}
#search-input {
    padding: .5em;
    width:20em;
    font-size: 0.8em;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    float: right;
    margin-top:5px;
}
#search-results {
    margin-top:30px;
}
div.searchFormDisplay {
    display: none;
}

/* end search */

/* callout styles*/

.bs-callout {
    padding: 20px;
    margin: 20px 0;
    border: 1px solid #eee;
    border-left-width: 5px;
    border-radius: 3px;
}
.bs-callout h4 {
    margin-top: 0;
    margin-bottom: 5px;
}
.bs-callout p:last-child {
    margin-bottom: 0;
}
.bs-callout code {
    border-radius: 3px;
}
.bs-callout+.bs-callout {
    margin-top: -5px;
}
.bs-callout-default {
    border-left-color: #777;
}
.bs-callout-default h4 {
    color: #777;
}
.bs-callout-primary {
    border-left-color: #428bca;
}
.bs-callout-primary h4 {
    color: #428bca;
}
.bs-callout-success {
    border-left-color: #5cb85c;
}
.bs-callout-success h4 {
    color: #5cb85c;
}
.bs-callout-danger {
    border-left-color: #d9534f;
}
.bs-callout-danger h4 {
    color: #d9534f;
}
.bs-callout-warning {
    border-left-color: #f0ad4e;
}
.bs-callout-warning h4 {
    color: #f0ad4e;
}
.bs-callout-info {
    border-left-color: #5bc0de;
}
.bs-callout-info h4 {
    color: #5bc0de;
}

/* end callout styles*/


/* bootstrap tables */


th {
    text-align: left;
}
table {
    max-width: 90%;
    margin-bottom: 20px;
    border: 1px solid #dedede;
    background-color: transparent;
}

table > thead > tr > th,
table > tbody > tr > th,
table > tfoot > tr > th,
table > thead > tr > td,
table > tbody > tr > td,
table > tfoot > tr > td {
    padding: 8px;
    line-height: 1.42857143;
    vertical-align: top;
    border-top: 1px solid #ddd;
}
table > thead > tr > th {
    vertical-align: bottom;
    border-bottom: 2px solid #ddd;
    text-transform: none;
    background-color: #777;
    color: white;
    text-align: left;
}
table > caption + thead > tr:first-child > th,
table > colgroup + thead > tr:first-child > th,
table > thead:first-child > tr:first-child > th,
table > caption + thead > tr:first-child > td,
table > colgroup + thead > tr:first-child > td,
table > thead:first-child > tr:first-child > td {
    border-top: 0;
}
table > tbody + tbody {
    b
}
table > tbody > tr:nth-of-type(odd) {
    background-color: #f9f9f9;
}

table col[class*="col-"] {
    position: static;
    display: table-column;
    float: none;
}
table td[class*="col-"],
table th[class*="col-"] {
    position: static;
    display: table-cell;
    float: none;
}


table td:first-child {
    width: 150px;
    /*font-weight:bold;*/
}

table.boldFirstColumn td:first-child {
    font-weight: bold;
}

table tr td {
    hyphens: auto;
}


table.dataTable thead {
    background-color: #444;
}
table td {
    hyphens: auto;
}

table code {background-color: transparent;}

table p {
    margin-top: 12px;
    margin-bottom: 12px;
}

pre, table code {
    white-space: pre-wrap;       /* css-3 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;       /* Internet Explorer 5.5+ */
}
/* end table styles */

/* syntax highlightig */
.highlight .err {
    color: #a61717;
    background-color: transparent !important;
}
/* svg styling */
*
 * Let's target IE to respect aspect ratios and sizes for img tags containing SVG files
 *
 * [1] IE9
 * [2] IE10+
 */
/* 1 */
.ie9 img[src$=".svg"] {
    width: 100%;
}
/* 2 */
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
    img[src$=".svg"] {
        width: 100%;
    }
}
/* end */

/* image styles */
figcaption {
    padding-bottom:12px;
    padding-top:6px;
    max-width: 90%;
    margin-bottom:20px;
    font-style: italic;
    color: gray;
}
/* end */

div.tags {
    margin: 15px 5px;
}
.label {
    border-radius: .25em;
    margin-right: 5px;
}
span.projectTitle {
    font-family: Arial;
    font-weight: bold;

}

ul#entrypages li {
    font-size: 12px;
}

/*top nav */
span.sidebarToggle {
font: normal normal normal 10px/.6 FontAwesome;
font-size: 2.3rem;
padding-bottom:0px;
}

img.navbar-logo {
    max-width: 130px;
    padding:0px;
    padding-bottom: 5px;
}
.navbar-brand {
    margin-right: 30px;
}

.navbar {
    border-bottom: 1px solid #dedede;
    font-size: 16px;
    padding-top:0px;
}

.toggle-sidebar-button {
  padding-bottom: 3px;
  color: white;
}

/* search adjustments */
.input-group.search {
  max-width: 200px;
  margin-right: 10px;
  margin-top:30px;
}

.sidebarSearchBar {
  margin-bottom: 30px;
}

.productSubtitle {
  color: #777;
}
/* end search */

/* right column */


.right-lane {
  right: 0;
  top: 120px;
  bottom:0;
  position:fixed;
  margin-right: 0px;
  overflow: auto;
  padding: 0px;
}

.tags {
  background-color: whitesmoke;
    padding: 15px;
    border-radius: 5px;
    max-width: 300px;
    color: #444;
}

.right-lane .tag-button {
  margin: 10px 0px;
  display: block;
}

ul#docnavsidebar li a:focus {
  text-decoration: none;
}

.searchForm404 {
  margin: 20px 0px;
}

.center-image
{
    text-align: center;
    width: 100%;
}

/*image borders*/
#imageborder
{
    border: 1.5px solid lightgray;
    border-radius: 7px;
}

/*cards styles*/

.card {
    /* Add shadows to create the "card" effect */
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    padding: 10px;
    display: inline-block;
    vertical-align: top;
    width: 24%;
    margin: 1px;
}

/* On mouse-over, add a deeper shadow */
.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

/*tab styles*/

/* Style the tab */
.tab {
    overflow: hidden;
    border: 1px solid #ccc;
    background-color: #f1f1f1;
}

/* Style the buttons that are used to open the tab content */
.tab button {
    background-color: inherit;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
}

/* Change background color of buttons on hover */
.tab button:hover {
    background-color: #ddd;
}

/* Create an active/current tablink class */
.tab button.active {
    background-color: #ccc;
}

/* Style the tab content */
.tabcontent {
    display: none;
    padding: 6px 12px;
    border: 1px solid #ccc;
    border-top: none;
}

